fix: avoid element shift on border change on hover

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -18,34 +18,46 @@ header {
 		}
 		&__search {
 			width: 50%;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			column-gap: 0.5rem;
 			margin-bottom: auto;
-			padding: 0.5rem;
+			padding-bottom: 0;
 			background-color: #fff;
-			border-bottom: 4px solid var(--redColor);
-			input {
-				height: 2.8rem;
-				width: 30rem;
-				padding: 0.5rem 1rem;
-				line-height: 1.8rem;
-				font-size: 1.2rem;
-				border: none;
-				outline: none;
-				flex-grow: 1;
+			transition: 200ms;
+			&:hover {
+				box-shadow: 0 0 10px var(--redColor);
 			}
-			button {
-				height: 2.8rem;
-				outline: none;
-				padding: 0.5rem 1rem;
-				line-height: 1.8rem;
-				font-size: 1.2rem;
-				border: none;
-				background-color: var(--redColor);
-				color: #fff;
-				cursor: pointer;
+			div {
+				width: 100%;
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				column-gap: 0.5rem;
+				padding: 0.5rem;
+				padding-bottom: 0.3rem;
+				border-bottom: 0.2rem solid transparent;
+				&:focus-within {
+					border-bottom: 0.2rem solid var(--redColor);
+				}
+				input {
+					height: 2.8rem;
+					width: 30rem;
+					padding: 0.5rem 1rem;
+					line-height: 1.8rem;
+					font-size: 1.2rem;
+					border: none;
+					outline: none;
+					flex-grow: 1;
+				}
+				button {
+					height: 2.8rem;
+					outline: none;
+					padding: 0.5rem 1rem;
+					line-height: 1.8rem;
+					font-size: 1.2rem;
+					border: none;
+					background-color: var(--redColor);
+					color: #fff;
+					cursor: pointer;
+				}
 			}
 		}
 		&__filter {
